Fixed login button alignment

--- a/mystyle.css
+++ b/mystyle.css
@@ -116,7 +116,6 @@ hr{
 {
 	padding-top:8px;
 	display: inline-block;
-	width:201px;
 	text-align:left;
 }
 
